<resources>
    <string name="app_name">Pepsa Dispatch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terms_and_condition">T &amp; C | Privacy Policy</string>
    <string name="copy_right">© Pepsa-Tech 2023</string>
    <string name="login_admin">Login admin</string>
    <string name="pepsa_logo">Pepsa logo</string>
    <string name="welcome_to_pepsa_dispatch">Welcome to \nPepsa Dispatch</string>
    <string name="continue_txt">Continue</string>
    <string name="watch_word">Deliver within your city, increase your earnings, and be the boss.</string>
    <string name="watch_word_2">Deliver within your city \nIncrease your earnings \nBe the boss.</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="utilities">Utilities</string>
    <string name="tasks">Tasks</string>
    <string name="home">Home</string>
    <string name="wallet">Wallet</string>
    <string name="profile">Profile</string>
    <string name="online">Online</string>
    <string name="order_id_text_place_holder">Order ID: 8755643773</string>
    <string name="order_id_place_holder">Order ID: &#160; %1s</string>
    <string name="task_date_place_holder">Date/Time: &#160;18–06–2022 &#160;14:25:00</string>
    <string name="store_name_tv">Foodco Supermarket</string>
    <string name="store_address_tv">1, Baptist bus-stop, Gen gas-Akobo Road, Ibadan</string>
    <string name="address">WeelDrop Filling Station</string>
    <string name="address_2">22, Ogunmola house, alegongo nickdel college, akobo, ibadan</string>
    <string name="school_name_two">Nickdel School</string>
    <string name="task_pay_price_txt_place_holder">₦310.99</string>
    <string name="naira_symbol">₦ %1s</string>
    <string name="route">Route</string>
    <string name="details">Details</string>
    <string name="cancel">Cancel</string>
    <string name="app_logo">Pepsa Logo</string>
    <string name="offline">Offline</string>
    <string name="satellite">Satellite View</string>
    <string name="terrain">Terrain View</string>
    <string name="normal">Normal View</string>
    <string name="traffic">Traffic</string>
    <string name="satellite_view_selected">Satellite view selected</string>
    <string name="terrain_view_selected">Terrain view selected</string>
    <string name="traffic_view_selected">Traffic view selected</string>
    <string name="normal_view_selected">Normal view selected</string>
    <string name="you">You</string>
    <string name="incoming_order_from_pd">Incoming Order from  Pepsa Dispatch</string>
    <string name="order_from">Order from: \n</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="server_error">Server error, kindly try again later</string>
    <string name="time_out">Time out! Please try again later</string>
    <string name="failed_tryagain">Failed, please try again</string>
    <string name="loader_image">Loader image</string>
    <string name="connection_available">Connection available</string>
    <string name="connection_unavailable">No internet connection</string>
    <string name="label_device_token">Device token</string>
</resources>