<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".welcomeScreens.LandingPage">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/welcome_page_bg">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@null"
            android:scaleType="fitXY"
            android:src="@drawable/grocery_delivery_image"
            app:layout_constraintBottom_toTopOf="@+id/gl_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/gl_2" />

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/overlay_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/gl_4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:contentDescription="@string/pepsa_logo"
            android:scaleType="fitXY"
            android:src="@drawable/pepsa_logo_red_color"
            app:layout_constraintBottom_toTopOf="@+id/gl_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <TextView
            android:id="@+id/textView4"
            style="@style/title_case"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:fontFamily="@font/open_sans_extrabold"
            android:gravity="top|center_horizontal|fill_vertical"
            android:lineHeight="@dimen/dimen_35dp"
            android:lineSpacingExtra="@dimen/dimen_5dp"
            android:text="@string/welcome_to_pepsa_dispatch"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7" />

        <TextView
            android:id="@+id/textView5"
            style="@style/footer"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/watch_word"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <android.widget.Button
            android:id="@+id/button"
            style="@style/btn_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_20dp"
            android:layout_marginBottom="@dimen/dimen_15dp"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.39" />

        <TextView
            android:id="@+id/textView3"
            style="@style/footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_25dp"
            android:text="@string/login_admin"
            android:textColor="@color/off_white"
            android:textSize="@dimen/dimen_14sp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView"
            style="@style/footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginBottom="@dimen/dimen_15dp"
            android:text="@string/terms_and_condition"
            android:textColor="@color/off_white_darker"
            android:textSize="@dimen/dimen_14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView2"
            style="@style/footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:text="@string/copy_right"
            android:textColor="@color/off_white_darker"
            android:textSize="@dimen/dimen_13sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>