<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:hint="http://schemas.android.com/tools">

    <data>

        <variable
            name="incomingOrder"
            type="com.pepsa.pepsadispatch.orders.domain.models.OrderDomain" />

        <variable
            name="orderViewModel"
            type="com.pepsa.pepsadispatch.orders.presentation.viewModels.OrdersViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/grey">

        <TextView
            android:id="@+id/order_id_tv"
            style="@style/dialog_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_25dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@{String.format(@string/order_id_place_holder, incomingOrder.orderId)}"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            hint:text="@string/order_id_text_place_holder" />

        <TextView
            android:id="@+id/task_date_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@{incomingOrder.dateTime}"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_12sp"
            app:layout_constraintBottom_toBottomOf="@+id/order_id_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/order_id_tv"
            hint:text="@string/task_date_place_holder" />

        <View
            android:id="@+id/view3"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_2dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:background="@drawable/divider_one"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/order_id_tv" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="@dimen/dimen_20dp"
            android:layout_height="@dimen/dimen_20dp"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3"
            app:srcCompat="@drawable/up_arrow" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@{incomingOrder.pickupStore}"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/imageView5"
            hint:text="@string/store_name_tv" />

        <TextView
            android:id="@+id/store_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:text="@{incomingOrder.address_1}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            hint:text="@string/store_address_tv" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="@dimen/dimen_20dp"
            android:layout_height="@dimen/dimen_20dp"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:layout_constraintStart_toStartOf="@+id/imageView5"
            app:layout_constraintTop_toBottomOf="@+id/store_address"
            app:srcCompat="@drawable/pepsa_location_icon" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:text="@{incomingOrder.landMark1}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/store_address"
            app:layout_constraintTop_toTopOf="@+id/imageView6"
            hint:text="@string/address" />

        <!-- Second line -->
        <ImageView
            android:id="@+id/down_arrow"
            android:layout_width="@dimen/dimen_20dp"
            android:layout_height="@dimen/dimen_20dp"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            app:srcCompat="@drawable/down_arrow" />

        <TextView
            android:id="@+id/address_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:text="@{incomingOrder.address_2}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/down_arrow"
            app:layout_constraintTop_toTopOf="@+id/down_arrow"
            hint:text="@string/address_2" />

        <ImageView
            android:id="@+id/address_line_2"
            android:layout_width="@dimen/dimen_20dp"
            android:layout_height="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:layout_constraintStart_toStartOf="@+id/imageView6"
            app:layout_constraintTop_toBottomOf="@+id/address_2"
            app:srcCompat="@drawable/pepsa_location_icon" />

        <TextView
            android:id="@+id/store_line_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:text="@{incomingOrder.landMark2}"
            app:layout_constraintEnd_toEndOf="@+id/address_2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/address_2"
            app:layout_constraintTop_toTopOf="@+id/address_line_2"
            hint:text="@string/school_name_two" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="@dimen/dimen_20dp"
            android:layout_height="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_15dp"
            app:layout_constraintStart_toStartOf="@+id/imageView5"
            app:layout_constraintTop_toBottomOf="@+id/store_line_2"
            app:srcCompat="@drawable/distance_icon" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@{incomingOrder.distance}"
            app:layout_constraintBottom_toBottomOf="@+id/imageView7"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toTopOf="@+id/imageView7"
            hint:text="0.2 km" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView7"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toTopOf="@+id/imageView7"
            app:srcCompat="@drawable/ic_duration" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:text="@{incomingOrder.timeTaken}"
            app:layout_constraintBottom_toBottomOf="@+id/imageView8"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="@+id/imageView8"
            hint:text="1.5 min" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="@dimen/dimen_20dp"
            android:layout_height="@dimen/dimen_20dp"
            android:layout_marginStart="@dimen/dimen_20dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView8"
            app:layout_constraintStart_toEndOf="@+id/textView14"
            app:layout_constraintTop_toTopOf="@+id/imageView8"
            app:srcCompat="@drawable/frigile_icon" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView9"
            app:layout_constraintStart_toEndOf="@+id/imageView9"
            app:layout_constraintTop_toTopOf="@+id/imageView9"
            hint:text="Frigile" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="@dimen/dimen_20dp"
            android:layout_height="@dimen/dimen_20dp"
            android:layout_marginStart="@dimen/dimen_20dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView9"
            app:layout_constraintStart_toEndOf="@+id/textView15"
            app:layout_constraintTop_toTopOf="@+id/imageView9"
            app:srcCompat="@drawable/pendin_icon" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:text="Pending"
            app:layout_constraintBottom_toBottomOf="@+id/imageView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/imageView10" />

        <View
            android:id="@+id/view4"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14"
            app:layout_constraintVertical_bias="0.0" />

        <android.widget.Button
            android:id="@+id/amount_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:background="@drawable/chip_background_white"
            android:minHeight="@dimen/dimen_30dp"
            android:text="@{String.format(@string/naira_symbol, incomingOrder.taskPrice)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageView7"
            app:layout_constraintTop_toTopOf="@+id/view4"
            hint:text="@string/task_pay_price_txt_place_holder" />

        <android.widget.Button
            android:id="@+id/chip_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:background="@drawable/chip_background"
            android:fontFamily="@font/poppins_bold"
            android:minWidth="@dimen/dimen_70dp"
            android:minHeight="@dimen/dimen_30dp"
            android:onClick="@{() -> orderViewModel.acceptOrRejectOrder(true)}"
            android:text="@string/reject"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/amount_chip"
            app:layout_constraintStart_toEndOf="@+id/amount_chip"
            app:layout_constraintTop_toTopOf="@+id/amount_chip" />

        <android.widget.Button
            android:id="@+id/chip_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:background="@drawable/chip_background"
            android:fontFamily="@font/poppins_bold"
            android:minWidth="@dimen/dimen_70dp"
            android:minHeight="@dimen/dimen_30dp"
            android:visibility="invisible"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/chip_1"
            app:layout_constraintEnd_toStartOf="@+id/chip_3"
            app:layout_constraintStart_toEndOf="@+id/chip_1"
            app:layout_constraintTop_toTopOf="@+id/chip_1" />

        <android.widget.Button
            android:id="@+id/chip_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/chip_background"
            android:fontFamily="@font/poppins_bold"
            android:minWidth="@dimen/dimen_70dp"
            android:minHeight="@dimen/dimen_30dp"
            android:onClick="@{() -> orderViewModel.acceptOrRejectOrder(false)}"
            android:text="@string/accept"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/chip_2"
            app:layout_constraintEnd_toEndOf="@+id/textView16"
            app:layout_constraintTop_toTopOf="@+id/chip_2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>